# parallel-computation

./: .gitignore  README.md
hw1/: orders.txt  test.cpp  并行计算第一次作业实验报告.md  第一次作业.docx
hw1/hw1/: hw1.sln
hw1/hw1/hw1/: func.h  hw1.vcxproj  hw1.vcxproj.filters  main.cpp
hw2/: orders.txt  并行计算第二次作业实验报告.md  第二次作业.docx
hw2/hw2/: .gitignore  hw2.sln
hw2/hw2/hw2/: hw2.vcxproj  hw2.vcxproj.filters  main.cpp
hw3/: 并行计算第三次作业实验报告.md  第三次作业.docx
hw3/hw3/: hw3.sln
hw3/hw3/hw3/: func.cpp  func.h  hw3.vcxproj  hw3.vcxproj.filters  parallel.cpp  sequence.cpp
hw4/: acceleration.xlsx  hw4.py  ref.cpp  并行计算第四次作业实验报告.md  第四次作业.docx
hw4/hw4/: .gitignore  CMakeLists.txt  SparceMatrix.h  SparseMatrix.cpp  SparseMatrix.h  bug_args.txt  log.cpp  log.h  main.cpp  pool.h  rand_sampler.h  timer.cpp  timer.h  type.h
